			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04x: *********************************

IMP: (8/28/06, SAF) PIE: Active frontier hashing properly recognizes composite
     parts as still active and recognizes pseudo parts belonging to the same
     composite part as neighbors.

BUG: (8/28/06, SMR) GNUCap simulation output is wrong.
FIX: In tool.io.output.Spice.java, use "0" for "gnd" and supress "@" for GNUCap.

IMP/MAN: (8/28/06, SMR) Added new Export commands: "Re-Export Deep Highlighted Area"
     and "Re-Export Deep Highlighted Area, With Wired Ports".  Deep reexporting
     recursively examines cell instances, creating exports from the bottom of the
     hierarchy (Bug #726).

BUG: (8/28/06, RK) PIE: Backtracking bug hides much ambiguity, type string should be one to one with type code

IMP: (8/25/06, SAF) PIE: InterchangePart access of P2P matrix from shared info, ports 
     partitioned by wire equivalence classes.

IMP: (8/25/06, RK) PIE: Store CompositeInfo in CompositePart

IMP: (8/25/06, GVG) Code to count number of transistors in Schematics (bug #1209)

IMP: (8/25/06, RK) PIE: First cut at equivalent pins

IMP: (8/25/06, RK) PIE: Deal with topologically identical islands

IMP: (8/25/06, SAF) PIE: All pseudo part info created with cannonical port ordering.

IMP/MAN: (8/25/06, JKG) Added menu command for down hier in place to object, bug#733

IMP: (8/24/06, SAF) PIE: Hash using sub-cell port to port matrix when creating port
     to port matrix. Pins and pseudo-parts classified by equivalence type. 

IMP/MAN: (8/24/06, GVG) Function to count number of transistors in Schematics.

IMP: (8/22/06, RK) PIE: Composite Part Information prints out

IMP: (8/22/06, SMR) Improvements to node extractor.

IMP/MAN: (8/24/06, SMR) Made waveform improvements: (1) Can now use the
     right-button to drag signals from one panel to another (this copies them,